nCache date field support, closes #3